# music-data-analysis

./: .gitignore  manifest.py  process.py  pyproject.toml  pyrightconfig.json  readme.md  run.py  run_one.py  skyline.py  test.ipynb  test.py
music_data_analysis/: __init__.py  apply.py  data_access.py  processor.py  run.py  run_one.py  utils.py
music_data_analysis/data/: __init__.py  pianoroll.py
music_data_analysis/processors/: align_sync.py  beats.py  chord.py  chord_old.py  duration.py  key.py  misc.py  note_density.py  note_stat.py  pianoroll.py  pitch.py  segmentation.py  synth.py
test/: test_pianoroll.py
test/midi_samples/: 0.mid  3.mid  34.mid  37.mid
