[project]
name = "music-data-analysis"
version = "0.1.0"
description = "A toolkit for analyzing symbolic music data"
authors = [{name = "eri24816", email = "a931eric@gmail.com"}]
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["music_data_analysis"]